<resources>
    <string name="app_name">ETH TEL</string>
    <string name="recharge">Recharge</string>
    <string name="cancel">Cancel</string>
    <string name="cardNumber">Scratch Card Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="call_me_back">Call Me Back</string>
    <string name="amount">Amount</string>
    <string name="transfer">Transfer</string>
    <string name="recharge_for_others">For Gift</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="no_camera_permission" translatable="false">Please Grant Permission</string>
    <string name="low_storage_error" translatable="false" />
    <string name="permission_camera_rationale" translatable="false" />
    <string name="use_flash" translatable="false">Flash Light</string>
    <string name="auto_focus" translatable="false">auto_focus</string>
    <string name="read_text" translatable="false">read_text</string>
    <string name="blank" translatable="false" />
    <string name="ocr_error" translatable="false">error</string>
    <string name="ocr_failure" translatable="false">failure</string>
    <string name="ocr_success" translatable="false">success</string>
    <string name="ocr_header" translatable="false">ocr_header</string>
    <string name="Data" translatable="false">OcrCaptureActivity</string>
    <string name="Dataa" translatable="false">text data is null</string>
    <string name="langSuccess">English</string>
    <string name="failed">Failed To Pick Contact</string>
    <string name="star">Give 5 Star :)</string>
    <string name="welcome">WELCOME</string>
    <string name="selectLang">Change Language</string>
    <string name="internet_package">INTERNET</string>
    <string name="voice_package">VOICE</string>
    <string name="sms_package">SMS</string>
    <string name="stay_home_package">STAY AT HOME</string>
    <string name="premium_package">PREMIUM</string>
    <string name="voice_premium_package">VOICE</string>
    <string name="internet_premium_package">INTERNET</string>
    <string name="voice_plus_internet_premium_package">VOICE + INTERNET</string>
    <string name="voice_plus_data">VOICE PLUS DATA</string>
    <string name="international_call">INTERNATIONAL (VOICE)</string>
    <string name="send">Send</string>
    <string name="feedbackHint">Let Us Know What went wrong and we\'ll work on it.</string>
    <string name="for_your_self">For Yourself</string>
    <string name="for_gift">For Gift</string>
    <string name="change_language">CHANGE LANGUAGE</string>
    <string name="rate_me">Rate Me</string>
    <string name="about_us">About Us</string>
    <string name="ethio_gebeta">Ethio Gebeta</string>
    <string name="credit_card">Credit</string>
    <string name="credit_card_service">Airtime Credit</string>
    <string name="call_center">Call Center</string>
    <string name="request">Request Credit</string>
    <string name="credit_5_etb_nprice_5_50_etb">Credit : 5 ETB\nPrice : 5.50 ETB</string>
    <string name="credit_10_etb_nprice_11_00_etb">Credit : 10 ETB\nPrice : 11.00 ETB</string>
    <string name="credit_15_etb_nprice_16_50_etb">Credit : 15 ETB\nPrice : 16.50 ETB</string>
    <string name="credit_25_etb_nprice_27_50_etb">Credit : 25 ETB\nPrice : 27.50 ETB</string>
    <string name="credit_50_etb_nprice_55_00_etb">Credit : 50 ETB\nPrice : 55.00 ETB</string>
    <string name="credit_100_etb_nprice_110_00_etb">Credit : 100 ETB\nPrice : 110.00 ETB</string>
    <string name="daily">DAILY</string>
    <string name="package_25_mb_nprice_3_00_etb">Package : 30 MB\nPrice : 3.00 ETB</string>
    <string name="package_45_mb_nprice_5_00_etb">Package : 70 MB\nPrice : 5.00 ETB</string>
    <string name="package_100_mb_nprice_10_00_etb">Package : 145 MB\nPrice : 10.00 ETB</string>
    <string name="package_200_mb_nprice_15_00_etb">Package : 250 MB\nPrice : 15.00 ETB</string>
    <string name="package_500_mb_nprice_35_00_etb">Package : 500 MB\nPrice : 28.00 ETB</string>
    <string name="package_1_gb_nprice_45_etb">Package : 1 GB \nPrice : 45.00 ETB</string>
    <string name="weekly">WEEKLY</string>
    <string name="package_250_mb_nprice_27_00_etb">Package : 250 MB\nPrice : 24.00 ETB</string>
    <string name="package_500_mb_nprice_50_00_etb">Package : 500 MB\nPrice : 38.00 ETB</string>
    <string name="package_700_mb_nprice_60_00_etb">Package : 750 MB\nPrice : 55.00 ETB</string>
    <string name="package_1_gb_nprice_80_00_etb">Package : 1 GB\nPrice : 70.00 ETB</string>
    <string name="package_2_gb_nprice_120_etb">Package : 2 GB \nPrice : 120.00 ETB</string>
    <string name="monthly">MONTHLY</string>
    <string name="package_500_mb_nprice_55_00_etb">Package : 500 MB\nPrice : 40.00 ETB</string>
    <string name="package_1_gb_nprice_100_00_etb">Package : 1 GB\nPrice : 75.00 ETB</string>
    <string name="package_2_gb_nprice_190_00_etb">Package : 2 GB\nPrice : 130.00 ETB</string>
    <string name="package_4_gb_nprice_350_00_etb">Package : 4 GB\nPrice : 250.00 ETB</string>
    <string name="package_8_gb_nprice_600_00_etb">Package : 8 GB\nPrice : 450.00 ETB</string>
    <string name="package_10_gb_nprice_700_00_etb">Package : 10 GB\nPrice : 520.00 ETB</string>
    <string name="package_20_gb_nprice_1300_00_etb">Package : 20 GB\nPrice : 890.00 ETB</string>
    <string name="package_30_gb_nprice_1800_00_etb">Package : 30 GB\nPrice : 1800.00 ETB</string>
    <string name="night">NIGHT</string>
    <string name="package_50_mb_nprice_3_00_etb">Package : 70 MB\nPrice : 3.00 ETB</string>
    <string name="package_100_mb_nprice_5_00_etb">Package : 150 MB\nPrice : 5.00 ETB</string>
    <string name="package_160_mb_nprice_7_00_etb">Package : 200 MB\nPrice : 7.00 ETB</string>
    <string name="weekend">WEEKEND</string>
    <string name="package_500_mb_nprice_35_00_etb_w">Package : 500 MB\nPrice : 30.00 ETB</string>
    <string name="package_1_gb_nprice_60_00_etb">Package : 1 GB\nPrice : 50.00 ETB</string>
    <string name="package_2_gb_nprice_110_00_etb">Package : 2 GB\nPrice : 90.00 ETB</string>
    <string name="buy">Buy</string>
    <string name="package_8_minutes_nprice_3_00_etb">Package : 10 Minutes\nPrice : 3.00 ETB</string>
    <string name="package_13_minutes_nprice_5_00_etb">Package : 17 Minutes\nPrice : 5.00 ETB</string>
    <string name="package_28_minutes_nprice_10_00_etb">Package : 35 Minutes\nPrice : 10.00 ETB</string>
    <string name="package_46_minutes_nprice_15_00_etb">Package : 60 Minutes\nPrice : 15.00 ETB</string>
    <string name="package_65_minutes_nprice_20_00_etb">Package : 80 Minutes\nPrice : 20.00 ETB</string>
    <string name="package_100_minutes_nprice_30_00_etb">Package : 100 Minutes\nPrice : 25.00 ETB</string>
    <string name="_100_minutes_n5mb_n30sms_nprice_40_00_etb">Package : 100 Minutes\nPrice : 35.00 ETB</string>
    <string name="_166_minutes_n5mb_n30sms_nprice_60_00_etb">Package : 150 Minutes\nPrice : 50.00 ETB</string>
    <string name="_280_minutes_n5mb_n30sms_nprice_100_00_etb">Package : 300 Minutes\nPrice : 95.00 ETB</string>
    <string name="_415_minutes_n5mb_n50sms_nprice_140_00_etb">Package : 400 Minutes\nPrice : 120.00 ETB</string>
    <string name="_450_minutes_n5mb_n50sms_nprice_150_00_etb">Package : 500 Minutes\nPrice : 140.00 ETB</string>
    <string name="_600_minutes_n5mb_n50sms_nprice_200_00_etb">Package : 600 Minutes\nPrice : 165.00 ETB</string>
    <string name="_750_minutes_n5mb_n50sms_nprice_250_00_etb">Package : 750 Minutes\nPrice : 200.00 ETB</string>
    <string name="_830_minutes_n5mb_n80sms_nprice_270_00_etb">Package : 1000 Minutes\nPrice : 240.00 ETB</string>
    <string name="_930_minutes_n5mb_n80sms_nprice_300_00_etb">Package : 1250 Minutes\nPrice : 295.00 ETB</string>
    <string name="_1080_minutes_n50mb_n80sms_nprice_350_00_etb">Package : 1500 Minutes\nPrice : 350.00 ETB</string>
    <string name="_1230_minutes_n50mb_n80sms_nprice_400_00_etb">Package : 1750 Minutes\nPrice : 405.00 ETB</string>
    <string name="_1380_minutes_n50mb_n80sms_nprice_450_00_etb">Package : 2000 Minutes\nPrice : 460.00 ETB</string>
    <string name="package_30_minutes_nprice_3_49_etb">Package : 30 Minutes\nPrice : 3.00 ETB</string>
    <string name="package_60_minutes_nprice_4_99_etb">Package : 60 Minutes\nPrice : 4.00 ETB</string>
    <string name="package_120_minutes_nprice_6_99_etb">Package : 120 Minutes\nPrice : 6.00 ETB</string>
    <string name="package_420_minutes_nprice_9_99_etb">Package : 420 Minutes\nPrice : 9.00 ETB</string>
    <string name="package_18_sms_nprice_2_00_etb">Package : 18 SMS\nPrice : 2.00 ETB</string>
    <string name="package_35_sms_nprice_3_00_etb">Package : 35 SMS\nPrice : 3.00 ETB</string>
    <string name="package_70_sms_nprice_5_00_etb">Package : 70 SMS\nPrice : 5.00 ETB</string>
    <string name="package_140_sms_nprice_10_00_etb">Package : 140 SMS\nPrice : 10.00 ETB</string>
    <string name="package_283_sms_nprice_15_00_etb">Package : 283 SMS\nPrice : 15.00 ETB</string>
    <string name="package_525_sms_nprice_30_00_etb">Package : 525 SMS\nPrice : 30.00 ETB</string>
    <string name="package_1050_sms_nprice_50_00_etb">Package : 1050 SMS\nPrice : 50.00 ETB</string>
    <string name="_2_weeks">2 WEEKS</string>
    <string name="package_10_minutes_nprice_59_etb">Package : 10 Minutes\nPrice : 59 ETB</string>
    <string name="package_20_minutes_nprice_100_etb">Package : 20 Minutes\nPrice : 100 ETB</string>
    <string name="package_50_minutes_nprice_195_etb">Package : 50 Minutes\nPrice : 195 ETB</string>
    <string name="_10_minutes_n145_mb_n10_sms_nprice_12_etb">10 Minutes\n145 MB\n10 SMS\nPrice : 12 ETB</string>
    <string name="_35_minutes_n145_mb_n10_sms_nprice_19_etb">35 Minutes\n145 MB\n10 SMS\nPrice : 19 ETB</string>
    <string name="_10_minutes_n500_mb_n10_sms_nprice_29_etb">10 Minutes\n500 MB\n10 SMS\nPrice : 29 ETB</string>
    <string name="_35_minutes_n500_mb_n10_sms_nprice_36_etb">35 Minutes\n500 MB\n10 SMS\nPrice : 36 ETB</string>
    <string name="_10_minutes_n1_gb_n10_sms_nprice_46_etb">10 Minutes\n1 GB\n10 SMS\nPrice : 46 ETB</string>
    <string name="_35_minutes_n1_gb_n10_sms_nprice_52_etb">35 Minutes\n1 GB\n10 SMS\nPrice : 52 ETB</string>
    <string name="_60_minutes_n500_mb_n20_sms_nprice_50_etb">60 Minutes\n500 MB\n20 SMS\nPrice : 50 ETB</string>
    <string name="_80_minutes_n500_mb_n20_sms_nprice_55_etb">80 Minutes\n500 MB\n20 SMS\nPrice : 55 ETB</string>
    <string name="_60_minutes_n1_gb_n20_sms_nprice_81_etb">60 Minutes\n1 GB\n20 SMS\nPrice : 81 ETB</string>
    <string name="_80_minutes_n1_gb_n20_sms_nprice_86_etb">80 Minutes\n1 GB\n20 SMS\nPrice : 86 ETB</string>
    <string name="_60_minutes_n2_gb_n20_sms_nprice_128_etb">60 Minutes\n2 GB\n20 SMS\nPrice : 128 ETB</string>
    <string name="active">ACTIVE</string>
    <string name="deactive">DEACTIVATE</string>
    <string name="Share">Share</string>
    <string name="call_forward_description">Call Forward allows you to forward your incoming calls to another phone</string>
    <string name="call_waiting_description">Call waiting lets you know about an incoming call while you are on a call with another one</string>
    <string name="update">Update</string>
    <string name="feedback">FeedBack</string>
    <string name="check_forwarding">Check Forwarding</string>
    <string name="check">CHECK BALANCE</string>
    <string name="recharges">RECHARGE BALANCE</string>
    <string name="transfers">TRANSFER BALANCE</string>
    <string name="call_me_backs">CALL ME BACK</string>
    <string name="gebeta">ETHIO GEBETA</string>
    <string name="credit">CREDIT SERVICE</string>
    <string name="forwarding">CALL FORWARDING</string>
    <string name="waiting">CALL WAITING</string>
    <string name="website">WEBSITE</string>
    <string name="call_centers">CALL CENTER</string>
    <string name="more">MORE</string>
    <string name="mysettings">SETTINGS</string>
</resources>