<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/background"
	android:layout_width="265dp"
	android:layout_height="wrap_content">
	<TextView
		android:id="@+id/textView"
		android:layout_width="match_parent"
		android:layout_height="35dp"
		android:background="@drawable/bluebutton"
		android:gravity="center"
		android:textStyle="bold"
		android:text="@string/forwarding"
		android:textColor="#ffffffff"
		android:textAllCaps="true"
		android:textSize="14.0sp" />
	<RelativeLayout
		android:layout_width="265dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/textView"
		android:padding="4.0dip">
		<LinearLayout
			android:id="@+id/underForward"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical">
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:layout_margin="2dp">
					<View
						android:layout_width="match_parent"
						android:layout_height="0.1dp"
						android:layout_marginTop="5dp"
						android:background="@drawable/selector" />
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="5.0dip"
						android:fontFamily="@font/mm"
						android:text="@string/call_forward_description"
						android:textColor="#ffffffff" />
					<View
						android:layout_width="match_parent"
						android:layout_height="0.1dp"
						android:layout_marginBottom="5dp"
						android:layout_marginTop="5dp"
						android:background="@drawable/selector" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/ti_username"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/underForward"
			android:orientation="vertical">
			<EditText
				android:id="@+id/forwardNumber"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:fontFamily="@font/mr"
				android:hint="@string/phone_number"
				android:imeOptions="actionDone"
				android:inputType="number"
				android:maxLength="10"
				android:textColor="#fff"
				android:textSize="15.0sp" />
			<ImageView
				android:id="@+id/selectForward"
				android:layout_width="35.0dip"
				android:layout_height="35.0dip"
				android:layout_gravity="right"
				android:layout_marginTop="-45.0dip"
				android:background="@drawable/contact" />
		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:id="@+id/forwardNow"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/ti_username"
			android:background="@drawable/selector_blue"
			android:enabled="false"
			android:fontFamily="@font/mm"
			android:text="@string/active"
			android:textColor="#ffffffff"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/forwardNow"
			android:orientation="vertical">
			<Button
				android:id="@+id/checkForward"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_marginTop="5.0dip"
				android:background="@drawable/custom_button"
				android:fontFamily="@font/mm"
				android:text="@string/check_forwarding" />
			<Button
				android:id="@+id/deactive"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_marginTop="5.0dip"
				android:background="@drawable/custom_button"
				android:fontFamily="@font/mm"
				android:text="@string/deactive" />
		</LinearLayout>
	</RelativeLayout>
</RelativeLayout>
