<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/background"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:orientation="vertical"
	android:weightSum="1.0">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/forwardCall"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/call_forward_button"
			android:layout_marginRight="40dp"
			android:layout_marginEnd="40dp"/>
		<ImageView
			android:id="@+id/waitCall"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/call_waiting_button" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/forwardID"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:text="@string/forwarding"
			android:gravity="center"
			android:textSize="10sp"
			android:layout_marginRight="28dp"
			android:layout_marginEnd="28dp" />
		<TextView
			android:id="@+id/waitingID"
			android:layout_width="120dp"
			android:gravity="center"
			android:textSize="10sp"
			android:layout_height="wrap_content"
			android:text="@string/waiting"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10.0dip"
		android:gravity="center"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/etWebs"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/ethiotel_web_button"
			android:layout_marginRight="40dp"
			android:layout_marginEnd="40dp"/>
		<ImageView
			android:id="@+id/helpCenter"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/call_for_help_button" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/websiteID"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:text="@string/website"
			android:gravity="center"
			android:textSize="10sp"
			android:layout_marginRight="28dp"
			android:layout_marginEnd="28dp" />
		<TextView
			android:id="@+id/centerID"
			android:layout_width="120dp"
			android:gravity="center"
			android:textSize="10sp"
			android:layout_height="wrap_content"
			android:text="@string/call_centers"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10.0dip"
		android:gravity="center"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/esTools"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/more_about_button"
			android:layout_marginRight="40dp"
			android:layout_marginEnd="40dp"/>
		<ImageView
			android:id="@+id/settings"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/settings_button" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/moreID"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:text="@string/more"
			android:gravity="center"
			android:textSize="10sp"
			android:layout_marginRight="28dp"
			android:layout_marginEnd="28dp" />
		<TextView
			android:id="@+id/settingID"
			android:layout_width="120dp"
			android:gravity="center"
			android:textSize="10sp"
			android:layout_height="wrap_content"
			android:text="@string/mysettings"/>
	</LinearLayout>

</LinearLayout>
