<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/background"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:orientation="vertical"
	android:weightSum="1.0">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/checkBalance"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/check_balance_button"
			android:layout_marginRight="40dp"
			android:layout_marginEnd="40dp" />
		<ImageView
			android:id="@+id/rechargeBalance"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/recharge_balance_button" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/checkID"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:text="@string/check"
			android:gravity="center"
			android:textSize="10sp"
			android:layout_marginRight="28dp"
			android:layout_marginEnd="28dp" />
		<TextView
			android:id="@+id/rechargeID"
			android:layout_width="120dp"
			android:gravity="center"
			android:textSize="10sp"
			android:layout_height="wrap_content"
			android:text="@string/recharges"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10.0dip"
		android:gravity="center"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/transferBalance"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/transfer_balance_button"
			android:layout_marginRight="40dp"
			android:layout_marginEnd="40dp"/>
		<ImageView
			android:id="@+id/callMeBack"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/callme_back_button" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/transferID"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:text="@string/transfers"
			android:gravity="center"
			android:textSize="10sp"
			android:layout_marginRight="28dp"
			android:layout_marginEnd="28dp" />
		<TextView
			android:id="@+id/callMeBackID"
			android:layout_width="120dp"
			android:gravity="center"
			android:textSize="10sp"
			android:layout_height="wrap_content"
			android:text="@string/call_me_backs"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10.0dip"
		android:gravity="center"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/ethioGebeta"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/gebeta_button"
			android:layout_marginRight="40dp"
			android:layout_marginEnd="40dp"/>
		<ImageView
			android:id="@+id/airTimeCredit"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/airtime_credit_button" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/gebetaID"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:text="@string/gebeta"
			android:gravity="center"
			android:textSize="10sp"
			android:layout_marginRight="28dp"
			android:layout_marginEnd="28dp" />
		<TextView
			android:id="@+id/creditID"
			android:layout_width="120dp"
			android:gravity="center"
			android:textSize="10sp"
			android:layout_height="wrap_content"
			android:text="@string/credit"/>
	</LinearLayout>

</LinearLayout>
