<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/background"
	android:layout_width="265dp"
	android:layout_height="wrap_content">
	<TextView
		android:id="@+id/textView"
		android:layout_width="match_parent"
		android:layout_height="35dp"
		android:background="@drawable/bluebutton"
		android:gravity="center"
		android:textStyle="bold"
		android:text="@string/waiting"
		android:textColor="#ffffffff"
		android:textAllCaps="true"
		android:textSize="14.0sp" />
	<RelativeLayout
		android:id="@+id/background1"
		android:layout_width="265dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/textView"
		android:padding="4.0dip">
		<LinearLayout
			android:id="@+id/underWait"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical">
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:layout_margin="2dp">
					<View
						android:layout_width="match_parent"
						android:layout_height="0.1dp"
						android:layout_marginTop="5dp"
						android:background="@drawable/selector" />
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="5.0dip"
						android:fontFamily="@font/mm"
						android:text="@string/call_waiting_description"
						android:textColor="#ffffffff" />
					<View
						android:layout_width="match_parent"
						android:layout_height="0.1dp"
						android:layout_marginBottom="5dp"
						android:layout_marginTop="5dp"
						android:background="@drawable/selector" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>

		<Button
			android:id="@+id/activeWait"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/underWait"
			android:background="@drawable/selector_blue"
			android:fontFamily="@font/mm"
			android:text="@string/active"
			android:textColor="#ffffffff"/>
		<Button
			android:id="@+id/deactiveWait"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/activeWait"
			android:layout_alignParentLeft="true"
			android:layout_marginTop="5.0dip"
			android:background="@drawable/custom_button"
			android:fontFamily="@font/mm"
			android:text="@string/deactive" />

	</RelativeLayout>
</RelativeLayout>
