<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/bluebutton"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/transfers"
            android:textColor="#ffffffff"
            android:textAllCaps="true"
            android:textSize="14.0sp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/textView"
            android:padding="5dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transferNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mr"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="#fff"
                    android:textSize="15.0sp" />
                <ImageView
                    android:id="@+id/select"
                    android:layout_width="35.0dip"
                    android:layout_height="35.0dip"
                    android:layout_gravity="right"
                    android:layout_marginTop="-45.0dip"
                    android:background="@drawable/contact" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_username"
                android:layout_alignParentLeft="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mr"
                    android:hint="@string/amount"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="#fff"
                    android:textSize="15.0sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/transferNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_password"
                android:layout_alignParentRight="true"
                android:background="@drawable/selector_blue"
                android:enabled="false"
                android:fontFamily="@font/mm"
                android:text="@string/transfer"
                android:textColor="#ffffffff"
                android:textSize="12.0sp" />
            <Button
                android:id="@+id/cancelTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_password"
                android:fontFamily="@font/mm"
                android:layout_alignParentLeft="true"
                android:background="@drawable/rounded_shape_card"
                android:gravity="center|left"
                android:text="@string/cancel"
                android:textSize="12.0sp" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
